--- a/WebSite/WebSite/Content/Site.css
+++ b/WebSite/WebSite/Content/Site.css
@@ -104,11 +104,11 @@ h5, h6 {
     padding-bottom: 35px;
 }
 
-    .main-content {
+    /*.main-content {
         background: url("../Images/accent.png") no-repeat;
         padding-left: 10px;
         padding-top: 30px;
-    }
+    }*/
 
     .featured + .main-content {
         background: url("../Images/heroAccent.png") no-repeat;
