--- a/WebSite/WebSite/Content/Site.css
+++ b/WebSite/WebSite/Content/Site.css
@@ -5,12 +5,12 @@
 }
 
 body {
-    background-color: #fff;
+    
     border-top: solid 10px #000;
     color: #333;
     font-size: .85em;
     font-family: "Segoe UI", Verdana, Helvetica, Sans-Serif;
-    margin: 0;
+    margin: 20px;
     padding: 0;
 }
 
@@ -99,8 +99,7 @@ h5, h6 {
 }
 
 #body {
-    background-color: #efeeef;
-    clear: both;
+  
     padding-bottom: 35px;
 }
 
