--- a/WebSite/WebSite/Views/Home/Index.cshtml
+++ b/WebSite/WebSite/Views/Home/Index.cshtml
@@ -2,6 +2,13 @@
     ViewBag.Title = "Home Page";
 }
 
-    
+<div ng-controller="drive-controller" id="left-sidebar">
+    <div class="drive" ng-repeat="drive in Drives track by $index">
+        <p class="drive-place" ng-click="getSubItems()">
+            <img src="../Images/hard-drive.png" alt={{drive}}/>
+            <span class="drive-name">{{drive}}</span>
+        </p>
+    </div>
+</div>
 
 
