--- a/WebSite/WebSite/Views/Shared/_Layout.cshtml
+++ b/WebSite/WebSite/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="main">
 <head>
     <meta charset="utf-8" />
     <title>@ViewBag.Title - My ASP.NET MVC Application</title>
@@ -9,6 +9,7 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
+    @Scripts.Render("~/bundles/angular")
     <header>
         <div class="content-wrapper">
             <div class="float-right">
@@ -16,18 +17,21 @@
                     @Html.Partial("_LoginPartial")
                 </section>
                 @*<nav>
-                    <ul id="menu">
-                        <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    </ul>
-                </nav>*@
+                        <ul id="menu">
+                            <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                        </ul>
+                    </nav>*@
+
+               
+
             </div>
         </div>
     </header>
+
     <div id="body">
-        <section class="content-wrapper main-content clear-fix">
-            @RenderBody()
-        </section>
+        @RenderBody()
     </div>
+
     <footer>
         <div class="content-wrapper">
             <div class="float-left">
