--- a/WebSite/WebSite/Views/Home/Index.cshtml
+++ b/WebSite/WebSite/Views/Home/Index.cshtml
@@ -2,7 +2,10 @@
     ViewBag.Title = "Home Page";
 }
 
-<div ng-controller="drive-controller">
+@section Angular {
+    @Scripts.Render("~/bundles/angular")
+}
+<div ng-app="main" ng-controller="drive-controller">
     <div id="left-sidebar">
         <div class="drive" ng-repeat="drive in drives track by $index">
             <p class="drive-place" ng-click="getSubItems(drive)">
