--- a/WebSite/WebSite/Views/Shared/_Layout.cshtml
+++ b/WebSite/WebSite/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en" ng-app="main">
+<html lang="en">
 <head>
     <meta charset="utf-8" />
     <title>@ViewBag.Title - My ASP.NET MVC Application</title>
@@ -9,7 +9,7 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    @Scripts.Render("~/bundles/angular")
+    @RenderSection("angular", required: false)
     <header>
         <div class="content-wrapper">
             <div class="float-right">
