--- a/WebSite/WebSite/Views/Shared/_LoginPartial.cshtml
+++ b/WebSite/WebSite/Views/Shared/_LoginPartial.cshtml
@@ -1,19 +1,18 @@
 ﻿@if (Request.IsAuthenticated)
 {
-    <text>
-        @if (User.IsInRole("admin"))
-        {
-            @Html.ActionLink("Admin's Page", "AdminIndex", "Home", null, null)
-        }
 
-        @Html.ActionLink(User.Identity.Name, "Manage", "Account", routeValues: null, htmlAttributes: new { @class = "username", title = "Manage" })
-        @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm" }))
-        {
-            @Html.AntiForgeryToken()
-            <a href="javascript:document.getElementById('logoutForm').submit()">Log off</a>
-        }
-    </text>
+    if (User.IsInRole("admin"))
+    {
+        <li>@Html.ActionLink("Admin's Page", "AdminIndex", "Home", null, null)</li>
+    }
 
+    <li>@Html.ActionLink(User.Identity.Name, "Manage", "Account", routeValues: null, htmlAttributes: new { @class = "username", title = "Manage" })</li>
+
+    using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm" }))
+    {
+        @Html.AntiForgeryToken()
+        <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
+    }
 }
 else
 {
