wor with jasmine

--- a/WebSite/WebSite/Views/Shared/_LoginPartial.cshtml
+++ b/WebSite/WebSite/Views/Shared/_LoginPartial.cshtml
@@ -6,7 +6,11 @@
         <li>@Html.ActionLink("Admin's Page", "AdminIndex", "Home")</li>
     }
 
-    <li>@Html.ActionLink(User.Identity.Name, "Manage", "Account", routeValues: null, htmlAttributes: new { @class = "username", title = "Manage" })</li>
+    if (User.IsInRole("admin") || User.IsInRole("moderator"))
+    {
+        <li>@Html.ActionLink("Tests", "TestsIndex", "Home")</li>
+    }
+
 
     using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm" }))
     {
