--- a/WebSite/WebSite/Views/Home/AdminIndex.cshtml
+++ b/WebSite/WebSite/Views/Home/AdminIndex.cshtml
@@ -6,7 +6,7 @@
 }
 
 <h2>Admin's Page</h2>
-<div ng-app="adminApp" ng-controller="admin-controller">
+<div ng-app="adminApp" ng-controller="adminController">
     <div class="table-users">
         <table>
             <thead>
