--- a/WebSite/WebSite/Views/Home/TestsIndex.cshtml
+++ b/WebSite/WebSite/Views/Home/TestsIndex.cshtml
@@ -15,16 +15,16 @@
     <script src="~/Scripts/angular/angular.js"></script>
     <script src="http://code.angularjs.org/1.1.5/angular-mocks.js"></script>
     <link rel="stylesheet" href="~/Content/jasmine-web-site.css">
-    <script src="~/Scripts/angular/controllers/drive-controller.js"></script>
-    <script src="~/Scripts/angular/services/system-service.js"></script>
+    @*<script src="~/Scripts/angular/controllers/driveController.js"></script>*@
+    <script src="~/Scripts/angular/services/systemService.js"></script>
     <script src="~/Scripts/config.js"></script>
     <script src="~/Scripts/app-spec.js"></script>
     <script src="~/Scripts/jasmine/jasmine-bootstrap.js"></script>
-    <!-- bootstraps Jasmine -->
+ 
 </head>
 
 <body>
-    <div id="container" ng-controller="drive-controller">
+    <div id="container" ng-controller="driveController">
 
     </div>
     <div id="HTMLReporter" class="jasmine_reporter"></div>
