Added tests bundles

--- a/WebSite/WebSite/Views/Shared/_Layout.cshtml
+++ b/WebSite/WebSite/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
 </head>
 <body>
     @RenderSection("angular", required: false)
+    @RenderSection("tests", required: false)
     <header>
         <div class="content-wrapper">
             <div class="float-left">
