--- a/WebSite/WebSite/Views/Home/TestsIndex.cshtml
+++ b/WebSite/WebSite/Views/Home/TestsIndex.cshtml
@@ -9,24 +9,12 @@
     <meta charset="utf-8">
     <title>AngularJS test</title>
     <link rel="stylesheet" href="//cdn.jsdelivr.net/jasmine/1.3.1/jasmine.css">
-
-    <script src="//cdn.jsdelivr.net/jasmine/1.3.1/jasmine.js"></script>
-    <script src="//cdn.jsdelivr.net/jasmine/1.3.1/jasmine-html.js"></script>
-    <script src="~/Scripts/angular/angular.js"></script>
-    <script src="http://code.angularjs.org/1.1.5/angular-mocks.js"></script>
-    <link rel="stylesheet" href="~/Content/jasmine-web-site.css">
-    @*<script src="~/Scripts/angular/controllers/driveController.js"></script>*@
-    <script src="~/Scripts/angular/services/systemService.js"></script>
-    <script src="~/Scripts/config.js"></script>
-    <script src="~/Scripts/app-spec.js"></script>
-    <script src="~/Scripts/jasmine/jasmine-bootstrap.js"></script>
- 
+    @Scripts.Render("~/bundles/tests")
 </head>
 
 <body>
     <div id="container" ng-controller="driveController">
 
     </div>
-    <div id="HTMLReporter" class="jasmine_reporter"></div>
 </body>
 </html>
