--- a/WebSite/WebSite/Views/Home/Index.cshtml
+++ b/WebSite/WebSite/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
         <div class="drive" ng-repeat="drive in drives track by $index">
             <p class="drive-place" ng-click="getSubItems(drive)">
                 <img src="../Images/hard-drive.png" alt={{drive}} />
-                <span class="drive-name">{{drive}}</span>
+                <span class="drive-name">{{driveNamesFilter(drive)}}</span>
             </p>
         </div>
     </div>
@@ -36,7 +36,7 @@
             <tbody>
                 <tr ng-repeat="folder in Folders track by $index">
                     <td ng-click="getSubItems(folder)"><img src="../Images/computer-folder.png" alt={{folder}} /></td>
-                    <td ng-click="getSubItems(folder)">{{folder}}</td>
+                    <td ng-click="getSubItems(folder)">{{ElementsNameFilter(folder)}}</td>
                     @if (User.IsInRole("admin"))
                     {
                         <td class="delete-btn" ng-click="deleteFolder(folder, $index)">|DELETE|</td>
@@ -44,7 +44,7 @@
                 </tr>
                 <tr ng-repeat="file in Files track by $index">
                     <td><img src="../Images/text-file.png" alt={{file}} /></td>
-                    <td>{{file}}</td>
+                    <td>{{ElementsNameFilter(file)}}</td>
                     @if (User.IsInRole("admin"))
                     {
                         <td class="delete-btn" ng-click="deleteFile(file, $index)">|DELETE|</td>
