--- a/WebSite/WebSite/Content/web-site.css
+++ b/WebSite/WebSite/Content/web-site.css
@@ -4,20 +4,33 @@
     min-height: 880px;
 }
 
-#navbar-row {
-    min-height:20px;
-    padding-top: 7px;
+ul#navbar-row {
+    min-height: 20px;
+    padding: 7px;
     margin-bottom: 20px;
 }
 
-.nav-elem{
-    text-decoration:none;
+    ul#navbar-row li {
+        display: inline;
+        margin-right: 5px;
+        padding: 3px;
+        font-weight: bold;
+    }
+
+.nav-elem img {
+    width: 20px;
+    margin-bottom: -3px;
 }
 
-.nav-elem:hover{
-   background-color: #c7d1d6;
-   cursor:pointer;
+.nav-elem {
+    text-decoration: none;
 }
+
+    .nav-elem:hover {
+        background-color: #c7d1d6;
+        cursor: pointer;
+    }
+
 .drive-name {
     font-size: 40px;
 }
