--- a/WebSite/WebSite/Views/Shared/_Layout.cshtml
+++ b/WebSite/WebSite/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
 
     @RenderBody()
 
-
+    <div class="to-top-button"></div>
     @Scripts.Render("~/bundles/jquery")
     @RenderSection("scripts", required: false)
 </body>
